# mkanta.github.io

./: .gitignore  LICENSE  README.md  about.html  archive.html  contact.html  gitWebSite.cabal  index.html  site.hs
css/: exercises.css  index.css  leftmenu.css  org-fold.css  orgmenu.css  topmenu.css
js/: bindings.js  exercises.js  leftmenu.js  org-fold.js
math/: example.html  example.org  math31.html
posts/: 2015-08-23-example.markdown  example.html  example.org
presentations/: functionalR.html  index.html
templates/: default.html  math-list.html
tutoring/: index.html
tutoring/Math-31/: exercises.html
tutoring/Phys-20/: exercises.html  exercises.js  exercisesOld.html  physics20.html  prep_questions.html
