name:                gitWebSite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mkanta/gitWebSite#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Kanta
maintainer:          gd4ev.mk@gmail.com
copyright:           lgpl
category:            website
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable gitWebSite
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc
